--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <footer>
   <div class="foot"> 
-<p>Thank You For Paying This Game !!</p>
+<p>Thank You For Playing This Game !!</p>
 <p>credits:Raj Singh</p>
   </div>
 </footer>
